--- a/src/index.html
+++ b/src/index.html
@@ -14,16 +14,10 @@
   </head>
   <body>
     <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
-      <div class="fixed-bottom p-4">
-        Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
-      </div>
+      <h1 id="heading"></h1>
+      <img
+        src="https://i.pinimg.com/originals/da/3c/ba/da3cba9fa30b159f37b129c0eea3d026.jpg"
+      />
     </div>
   </body>
 </html>
